org.eclipse.jdt.compiler.apt.tests/processors/org/eclipse/jdt/compiler/apt/tests/processors/negative/NegativeModelProc#checkNegative5().mjava
	public boolean checkNegative5() throws Exception {
		List<TypeElement> rootElements = new ArrayList<TypeElement>();
		TypeElement element = _elementUtils.getTypeElement("targets.negative.pa.Negative5");
		if (null == element) {
			reportError("Element Negative5 was not found");
			return false;
		}
		rootElements.add(element);
		element = _elementUtils.getTypeElement("targets.negative.pa.INegative5");
		if (null == element) {
			reportError("Element INegative5 was not found");
			return false;
		}
		rootElements.add(element);

		return checkModel(rootElements, NEGATIVE_5_MODEL, "Negative5");
	}

